# betgame

./: Anchor.toml  Cargo.toml  readme.md
cli/: core.ts
programs/chart-game/: Cargo.toml
programs/chart-game/src/: errors.rs  events.rs  lib.rs  state.rs
programs/chart-game/src/processor/: betting_game.rs  claim_prize.rs  close_game.rs  init_game.rs  initialize.rs  mod.rs  modify_game.rs  update.rs  update_game.rs
programs/faucet/: Cargo.toml
programs/faucet/src/: errors.rs  lib.rs  state.rs
programs/faucet/src/processor/: faucet.rs  initialize.rs  mod.rs
tests/: chart-game.ts  faucet.ts
tests/utils/: account.ts  index.ts  print.ts
